headers/RadarKit/RKMisc.h

enum RKJSONObjectType {
    RKJSONObjectTypeUnknown,
    RKJSONObjectTypePlain,
    RKJSONObjectTypeString,
    RKJSONObjectTypeArray,
    RKJSONObjectTypeObject
};
//
// Color Output
//

// Returns an escape sequence to produce colored output on terminal (random)
char *RKGetColor(void);
// Same as before but you get to choose the index
char *RKGetColorOfIndex(const int);
// Returns an escape sequence to produce colored background on terminal (random)
char *RKGetBackgroundColor(void);
// Same as before but you get to choose the index
char *RKGetBackgroundColorOfIndex(const int);
// Same as before but indexing in a cube-like coordinte, see rkutil -T1
char *RKGetBackgroundColorOfCubeIndex(const int);
//
// JSON (RadarKit 2)
//
// The following is a set of JSON functions that are *very* limited
// They are made for efficiency with many assumptions
//

// Extract a string into type, key, and vlaue
char *RKExtractJSON(char *ks, uint8_t *type, char *key, char *value);
// Get the value of a specific key
char *RKGetValueOfKey(const char *string, const char *key);
// Replace all values of a key
void RKReplaceAllValuesOfKey(char *string, const char *key, int value);
// Repalce enum of a key
void RKReplaceEnumOfKey(char *string, const char *key, int value);