python/src/radarkit/_ctypes_.py


struct_rk_simple_engine._pack_ = 1
struct_rk_simple_engine.__slots__ = [
    'name',
    'verbose',
    'tid',
    'state',
    'memoryUsage',
    'userResource',
]
struct_rk_simple_engine._fields_ = [
    ('name', RKName),
    ('verbose', uint8_t),
    ('tid', pthread_t),
    ('state', RKEngineState),
    ('memoryUsage', uint32_t),
    ('userResource', POINTER(None)),
]

RKSimpleEngine = struct_rk_simple_engine# RKTypes.h: 1605

# RKTypes.h: 1619
class struct_rk_file_monitor(Structure):
    pass

struct_rk_file_monitor._pack_ = 1
struct_rk_file_monitor.__slots__ = [
    'name',
    'verbose',
    'tid',
    'state',
    'memoryUsage',
    'filename',
    'callbackRoutine',
    'userResource',
]
struct_rk_file_monitor._fields_ = [
    ('name', RKName),
    ('verbose', uint8_t),
    ('tid', pthread_t),
    ('state', RKEngineState),
    ('memoryUsage', uint32_t),
    ('filename', c_char * int(1024)),
    ('callbackRoutine', CFUNCTYPE(UNCHECKED(None), POINTER(None))),
    ('userResource', POINTER(None)),
]

RKFileMonitor = struct_rk_file_monitor# RKTypes.h: 1619

# RKTypes.h: 1626
class struct_anon_121(Structure):
    pass

struct_anon_121._pack_ = 1
struct_anon_121.__slots__ = [
    'key',
    'name',
    'unit',
    'description',
    'colormap',
    'symbol',
    'index',
    'type',
    'pieceCount',
    'w',
    'b',
    'l',
    'mininimumValue',
    'maximumValue',
    'cfScale',
    'cfOffset',
]
struct_anon_121._fields_ = [
    ('key', uint32_t),
    ('name', RKName),
    ('unit', RKName),
    ('description', RKName),
    ('colormap', RKName),
    ('symbol', c_char * int(8)),
    ('index', RKProductIndex),
    ('type', RKProductType),
    ('pieceCount', uint32_t),
    ('w', RKFloat * int(16)),
    ('b', RKFloat * int(16)),
    ('l', RKFloat * int(16)),
    ('mininimumValue', RKFloat),
    ('maximumValue', RKFloat),
    ('cfScale', c_float),
    ('cfOffset', c_float),
]

# RKTypes.h: 1645
class union_rk_product_desc(Union):
    pass

union_rk_product_desc._pack_ = 1
union_rk_product_desc.__slots__ = [
    'unnamed_1',
    'bytes',
]
union_rk_product_desc._anonymous_ = [
    'unnamed_1',
]
union_rk_product_desc._fields_ = [
    ('unnamed_1', struct_anon_121),
    ('bytes', RKByte * int(1024)),
]

RKProductDesc = union_rk_product_desc# RKTypes.h: 1645

# RKTypes.h: 1648
class struct_anon_122(Structure):
    pass

struct_anon_122._pack_ = 1
struct_anon_122.__slots__ = [
    'radarName',
    'latitude',
    'longitude',
    'altitude',
    'heading',
    'radarHeight',
    'wavelength',
    'sweepElevation',
    'sweepAzimuth',
    'volumeIndex',
    'sweepIndex',
    'rayCount',
    'gateCount',
    'gateSizeMeters',
    'startTime',
    'endTime',
    'isPPI',
    'isRHI',
    'prt',
    'pw',
    'noise',
    'systemZCal',
    'systemDCal',
    'systemPCal',
    'ZCal',
    'DCal',
    'PCal',
    'SNRThreshold',
    'SQIThreshold',
    'waveformName',
    'momentMethod',
    'vcpDefinition',
    'suggestedFilename',
]
struct_anon_122._fields_ = [
    ('radarName', RKName),
    ('latitude', c_double),
    ('longitude', c_double),
    ('altitude', c_double),
    ('heading', c_float),
    ('radarHeight', c_float),
    ('wavelength', c_float),
    ('sweepElevation', c_float),
    ('sweepAzimuth', c_float),
    ('volumeIndex', uint32_t),
    ('sweepIndex', uint32_t),
    ('rayCount', uint32_t),
    ('gateCount', uint32_t),
    ('gateSizeMeters', c_float),
    ('startTime', c_double),
    ('endTime', c_double),
    ('isPPI', c_bool),
    ('isRHI', c_bool),
    ('prt', RKFloat * int(8)),
    ('pw', RKFloat * int(8)),
    ('noise', RKFloat * int(2)),
    ('systemZCal', RKFloat * int(2)),
    ('systemDCal', RKFloat),
    ('systemPCal', RKFloat),
    ('ZCal', (RKFloat * int(2)) * int(8)),
    ('DCal', RKFloat * int(8)),
    ('PCal', RKFloat * int(8)),
    ('SNRThreshold', RKFloat),
    ('SQIThreshold', RKFloat),
    ('waveformName', RKName),
    ('momentMethod', RKName),
    ('vcpDefinition', c_char * int(512)),
    ('suggestedFilename', c_char * int(1024)),
]

# RKTypes.h: 1684
class union_rk_product_header(Union):
    pass

union_rk_product_header._pack_ = 1
union_rk_product_header.__slots__ = [
    'unnamed_1',
    'bytes',
]
union_rk_product_header._anonymous_ = [
    'unnamed_1',
]
union_rk_product_header._fields_ = [
    ('unnamed_1', struct_anon_122),
    ('bytes', RKByte * int(2048)),
]

RKProductHeader = union_rk_product_header# RKTypes.h: 1684

# RKTypes.h: 1701
class struct_rk_product(Structure):
    pass

struct_rk_product._pack_ = 1
struct_rk_product.__slots__ = [
    'i',
    'pid',
    'desc',
    'flag',
    'header',
    'capacity',
    'totalBufferSize',
    'startAzimuth',
    'endAzimuth',
    'startElevation',
    'endElevation',
    'startTime',
    'endTime',
    'data',
]
struct_rk_product._fields_ = [
    ('i', RKIdentifier),
    ('pid', RKProductId),
    ('desc', RKProductDesc),
    ('flag', RKProductStatus),
    ('header', RKProductHeader),
    ('capacity', uint32_t),
    ('totalBufferSize', uint32_t),
    ('startAzimuth', POINTER(RKFloat)),
    ('endAzimuth', POINTER(RKFloat)),
    ('startElevation', POINTER(RKFloat)),
    ('endElevation', POINTER(RKFloat)),
    ('startTime', POINTER(c_double)),
    ('endTime', POINTER(c_double)),
    ('data', POINTER(RKFloat)),
]

RKProduct = struct_rk_product# RKTypes.h: 1701

# RKTypes.h: 1706
class struct_rk_product_collection(Structure):
    pass

struct_rk_product_collection._pack_ = 1
struct_rk_product_collection.__slots__ = [
    'count',
    'products',
]
struct_rk_product_collection._fields_ = [
    ('count', uint32_t),
    ('products', POINTER(RKProduct)),
]

RKProductCollection = struct_rk_product_collection# RKTypes.h: 1706

# RKTypes.h: 1715
class struct_rk_iir_filter(Structure):
    pass

struct_rk_iir_filter._pack_ = 1
struct_rk_iir_filter.__slots__ = [
    'name',
    'type',
    'bLength',
    'aLength',
    'B',
    'A',
]
struct_rk_iir_filter._fields_ = [
    ('name', RKName),
    ('type', RKFilterType),
    ('bLength', uint32_t),
    ('aLength', uint32_t),
    ('B', RKComplex * int(8)),
    ('A', RKComplex * int(8)),
]

RKIIRFilter = struct_rk_iir_filter# RKTypes.h: 1715

# RKTypes.h: 1721
class struct_rk_task(Structure):
    pass

struct_rk_task._pack_ = 1
struct_rk_task.__slots__ = [
    'command',
    'timeout',
    'endingEvent',
]
struct_rk_task._fields_ = [
    ('command', RKCommand),
    ('timeout', c_double),
    ('endingEvent', RKEventType),
]

RKTask = struct_rk_task# RKTypes.h: 1721

# RKTypes.h: 1733
class struct_rk_command_queue(Structure):
    pass

struct_rk_command_queue._pack_ = 1
struct_rk_command_queue.__slots__ = [
    'head',
    'tail',
    'count',
    'depth',
    'nonblocking',
    'buffer',
    'lock',
    'tic',
    'toc',
]
struct_rk_command_queue._fields_ = [
    ('head', uint16_t),
    ('tail', uint16_t),
    ('count', uint16_t),
    ('depth', uint16_t),
    ('nonblocking', c_bool),
    ('buffer', POINTER(RKCommand)),
    ('lock', pthread_mutex_t),
    ('tic', uint32_t),
    ('toc', uint32_t),
]

RKCommandQueue = struct_rk_command_queue# RKTypes.h: 1733

sa_family_t = c_ushort# /usr/include/x86_64-linux-gnu/bits/sockaddr.h: 28

# /usr/include/x86_64-linux-gnu/bits/socket.h: 183
class struct_sockaddr(Structure):
    pass

struct_sockaddr.__slots__ = [
    'sa_family',
    'sa_data',
]
struct_sockaddr._fields_ = [
    ('sa_family', sa_family_t),
    ('sa_data', c_char * int(14)),
]

in_addr_t = uint32_t# /usr/include/netinet/in.h: 30

# /usr/include/netinet/in.h: 31
class struct_in_addr(Structure):
    pass

struct_in_addr.__slots__ = [
    's_addr',
]
struct_in_addr._fields_ = [
    ('s_addr', in_addr_t),
]

in_port_t = uint16_t# /usr/include/netinet/in.h: 123

# /usr/include/netinet/in.h: 245
class struct_sockaddr_in(Structure):
    pass

struct_sockaddr_in.__slots__ = [
    'sin_family',
    'sin_port',
    'sin_addr',
    'sin_zero',
]
struct_sockaddr_in._fields_ = [
    ('sin_family', sa_family_t),
    ('sin_port', in_port_t),
    ('sin_addr', struct_in_addr),
    ('sin_zero', c_ubyte * int((((sizeof(struct_sockaddr) - sizeof(c_ushort)) - sizeof(in_port_t)) - sizeof(struct_in_addr)))),
]

enum_RKJSONObjectType = c_int# RKMisc.h: 113

RKJSONObjectTypeUnknown = 0# RKMisc.h: 113

RKJSONObjectTypePlain = (RKJSONObjectTypeUnknown + 1)# RKMisc.h: 113

RKJSONObjectTypeString = (RKJSONObjectTypePlain + 1)# RKMisc.h: 113

RKJSONObjectTypeArray = (RKJSONObjectTypeString + 1)# RKMisc.h: 113

RKJSONObjectTypeObject = (RKJSONObjectTypeArray + 1)# RKMisc.h: 113

# RKMisc.h: 126
if _libs["radarkit"].has("RKGetColor", "cdecl"):
    RKGetColor = _libs["radarkit"].get("RKGetColor", "cdecl")
    RKGetColor.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetColor.restype = ReturnString
    else:
        RKGetColor.restype = String
        RKGetColor.errcheck = ReturnString

# RKMisc.h: 129
if _libs["radarkit"].has("RKGetColorOfIndex", "cdecl"):
    RKGetColorOfIndex = _libs["radarkit"].get("RKGetColorOfIndex", "cdecl")
    RKGetColorOfIndex.argtypes = [c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetColorOfIndex.restype = ReturnString
    else:
        RKGetColorOfIndex.restype = String
        RKGetColorOfIndex.errcheck = ReturnString

# RKMisc.h: 132
if _libs["radarkit"].has("RKGetBackgroundColor", "cdecl"):
    RKGetBackgroundColor = _libs["radarkit"].get("RKGetBackgroundColor", "cdecl")
    RKGetBackgroundColor.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetBackgroundColor.restype = ReturnString
    else:
        RKGetBackgroundColor.restype = String
        RKGetBackgroundColor.errcheck = ReturnString

# RKMisc.h: 135
if _libs["radarkit"].has("RKGetBackgroundColorOfIndex", "cdecl"):
    RKGetBackgroundColorOfIndex = _libs["radarkit"].get("RKGetBackgroundColorOfIndex", "cdecl")
    RKGetBackgroundColorOfIndex.argtypes = [c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetBackgroundColorOfIndex.restype = ReturnString
    else:
        RKGetBackgroundColorOfIndex.restype = String
        RKGetBackgroundColorOfIndex.errcheck = ReturnString

# RKMisc.h: 138
if _libs["radarkit"].has("RKGetBackgroundColorOfCubeIndex", "cdecl"):
    RKGetBackgroundColorOfCubeIndex = _libs["radarkit"].get("RKGetBackgroundColorOfCubeIndex", "cdecl")
    RKGetBackgroundColorOfCubeIndex.argtypes = [c_int]
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetBackgroundColorOfCubeIndex.restype = ReturnString
    else:
        RKGetBackgroundColorOfCubeIndex.restype = String
        RKGetBackgroundColorOfCubeIndex.errcheck = ReturnString

# RKMisc.h: 148
if _libs["radarkit"].has("RKExtractJSON", "cdecl"):
    RKExtractJSON = _libs["radarkit"].get("RKExtractJSON", "cdecl")
    RKExtractJSON.argtypes = [String, POINTER(uint8_t), String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKExtractJSON.restype = ReturnString
    else:
        RKExtractJSON.restype = String
        RKExtractJSON.errcheck = ReturnString

# RKMisc.h: 151
if _libs["radarkit"].has("RKGetValueOfKey", "cdecl"):
    RKGetValueOfKey = _libs["radarkit"].get("RKGetValueOfKey", "cdecl")
    RKGetValueOfKey.argtypes = [String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetValueOfKey.restype = ReturnString
    else:
        RKGetValueOfKey.restype = String
        RKGetValueOfKey.errcheck = ReturnString

# RKMisc.h: 154
if _libs["radarkit"].has("RKReplaceAllValuesOfKey", "cdecl"):
    RKReplaceAllValuesOfKey = _libs["radarkit"].get("RKReplaceAllValuesOfKey", "cdecl")
    RKReplaceAllValuesOfKey.argtypes = [String, String, c_int]
    RKReplaceAllValuesOfKey.restype = None

# RKMisc.h: 157
if _libs["radarkit"].has("RKReplaceEnumOfKey", "cdecl"):
    RKReplaceEnumOfKey = _libs["radarkit"].get("RKReplaceEnumOfKey", "cdecl")
    RKReplaceEnumOfKey.argtypes = [String, String, c_int]
    RKReplaceEnumOfKey.restype = None
